--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,8 @@
-<h1>Zdravo Svete sa predmeta KVA!ng </h1>
-<p>
-    <a routerLink="/">Home</a> | <a routerLink="/about">About</a>
-</p>
+<mat-toolbar>
+    <span>KVA2025</span>
+    <span class="spacer"></span>
+    <a routerLink="/" mat-button>Home</a>
+    <a routerLink="/about" mat-button>About</a>
+</mat-toolbar>
+
 <router-outlet />
