--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,14 @@
+html, body {
+    height: 100%;
+    background-color: #36393e;
+    color: white;
+}
+
+a {
+    color: gray;
+}
+
 body {
-    font-family: monospace;
+    margin: 0;
+    font-family: Roboto, "Helvetica Neue", sans-serif;
 }
