--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,8 @@
     <span><i class="fa-solid fa-location-dot"></i> iTravel</span>
     <span class="spacer"></span>
     <a routerLink="/" mat-button><i class="fa-solid fa-house"></i> Home</a>
+    <a routerLink="/search" mat-button><i class="fa-solid fa-search"></i> Search</a>
+    <a routerLink="/airlines" mat-button><i class="fa-solid fa-plane"></i> Airlines</a>
     <a routerLink="/about" mat-button><i class="fa-solid fa-circle-info"></i> About</a>
 </mat-toolbar>
 
